--- a/README
+++ b/README
@@ -29,24 +29,24 @@ of the wolfSSL manual. (https://www.wolfssl.com/docs/wolfssl-manual/ch4/)
 *** Notes, Please read ***
 
 Note 1)
-wolfSSL as of 3.6.6 no longer enables SSLv3 by default.  wolfSSL also no longer
-supports static key cipher suites with PSK, RSA, or ECDH. This means if you
-plan to use TLS cipher suites you must enable DH (DH is on by default), or
-enable ECC (ECC is on by default), or you must enable static key cipher suites
-with
+wolfSSL as of 3.6.6 no longer enables SSLv3 by default. By default, wolfSSL
+also no longer supports static key cipher suites with PSK, RSA, or ECDH.
+This means if you plan to use TLS cipher suites you must enable DH
+(DH is on by default), or enable ECC (ECC is on by default), or you must enable
+static key cipher suites with one or more of the following defines:
 
-    WOLFSSL_STATIC_DH
-    WOLFSSL_STATIC_RSA
-      or
-    WOLFSSL_STATIC_PSK
+WOLFSSL_STATIC_DH
+WOLFSSL_STATIC_RSA
+WOLFSSL_STATIC_PSK
 
-though static key cipher suites are deprecated and will be removed from future
-versions of TLS.  They also lower your security by removing PFS.
+Static key cipher suites are being deprecated and will be removed from future
+versions of TLS. They also lower your security by removing perfect forward
+secrecy (PFS).
 
-When compiling ssl.c, wolfSSL will now issue a compiler error if no cipher
+When compiling `ssl.c`, wolfSSL will now issue a compiler error if no cipher
 suites are available. You can remove this error by defining
-WOLFSSL_ALLOW_NO_SUITES in the event that you desire that, i.e., you're not
-using TLS cipher suites.
+`WOLFSSL_ALLOW_NO_SUITES` in the event that you desire that, i.e., you're
+not using TLS cipher suites.
 
 Note 2)
 wolfSSL takes a different approach to certificate verification than OpenSSL
