--- a/README
+++ b/README
@@ -30,7 +30,7 @@ of the wolfSSL manual. (https://www.wolfssl.com/docs/wolfssl-manual/ch4/)
 
 Note 1)
 wolfSSL as of 3.6.6 no longer enables SSLv3 by default. By default, wolfSSL
-also no longer supports static key cipher suites with PSK, RSA, or ECDH.
+also no longer enables static key cipher suites with PSK, RSA, or ECDH.
 This means if you plan to use TLS cipher suites you must enable DH
 (DH is on by default), or enable ECC (ECC is on by default), or you must enable
 static key cipher suites with one or more of the following defines:
