CMake fixes and improvements
* Minor fixes to the CMakeLists.txt
* Add more options to the CMake infrastructure already present in the
  autoconf infrastructure
* An autoconf build now also generates and installs files required to
  consume the installed wolfssl library via CMake.
* Added test for autoconf-CMake interworking

Work is mostly done by Codex and Curser.

--- a/INSTALL
+++ b/INSTALL
@@ -16,6 +16,9 @@
     all the generated build options. This file needs to be included in your application
     before any other wolfSSL headers. Optionally your application can define
     WOLFSSL_USE_OPTIONS_H to do this automatically.
+    Note: Building with configure also installs CMake package files under
+    $(libdir)/cmake/wolfssl to support find_package(wolfssl). You can disable this
+    with ./configure --disable-cmake-install.
 
 2. Building on iOS
 
